--- a/packages/block-library/src/editor.scss
+++ b/packages/block-library/src/editor.scss
@@ -42,6 +42,7 @@
 @import "./social-link/editor.scss";
 @import "./social-links/editor.scss";
 @import "./spacer/editor.scss";
+@import "./speech/editor.scss";
 @import "./subhead/editor.scss";
 @import "./table/editor.scss";
 @import "./tag-cloud/editor.scss";
