--- a/packages/block-library/src/style.scss
+++ b/packages/block-library/src/style.scss
@@ -32,6 +32,7 @@
 @import "./site-logo/style.scss";
 @import "./social-links/style.scss";
 @import "./spacer/style.scss";
+@import "./speech/style.scss";
 @import "./subhead/style.scss";
 @import "./table/style.scss";
 @import "./text-columns/style.scss";
